 - [DS-194] Give METS ingester configuration option to make use of collection templates
 - [DS-195] Allow the primary bitstream to be set in the item importer / exporter
 - [DS-196] METS exposed via OAI-PMH includes description.provenance information
 - [DS-200] SWORD module requires the X-Packaging header
 - [DS-212] NPE thrown during Harvest of non-items when visibility restriction is enabled

(Larry Stone)
 - [DS-193] OAI RDF crosswalk fails when DC value is null

(Mark Diggory / Stuart Lewis)
 - [DS-201] handle.jar upgraded to version 6.2

(Andrea Bollini)
- [DS-206] Input form visibility restriction doesn't work properly
- [DS-199] SWORD module doesn't accept X-No-Op header (dry run)

(Tim Donohue)
- [DS-218] Cannot add/remove email subscriptions from Profile page in XMLUI


1.5.2 final
===========

(Graham Triggs)
 - Fixes for critical bugs identified by Findbugs

(Mark Diggory)
 - [DS-100] XMLUI OpenURL support contributed by the National Evolutionary Synthesis Center (NESCent) and @mire.
 - [DS-93]  Upgrade XMLUI to Cocoon 2.2
 - [DS-117] File uploads >=100KB lead to an error in the xmlui
 - [DS-154] Make a backup of the config dir on Ant update
 - [DS-155] Maven war plugin changes cause war to include libraries as well
 - [DS-183] XPDF support for filtering PDFs for text extraction/search authored by Larry Stone
 - [DS-185] bin files in DOS format
 
(Mark Wood)
 - [DS-2] [2002866] Return 404, not 200, when page Not Found
 - [DS-150] [2025998] Usage event (statistics) plugin hook
 - [DS-143] [2620307] 'ant init_configs' copies wrong dspace.cfg
 - [DS-41] Small JSP cleanups

(Mark Wood / Andrea Bollini)
- [DS-43] Manakin RSS feed generator cache timeout can't be adjusted - ID: 2593393

(Stuart Lewis)
 - [DS-4] [2057231] Refactor LDAPServlet to use Stackable Authentication
 - Enable ldap.login.specialgroup special group for all LDAP users
 - [DS-5] Fix for SF bug [2164955] DSpace1.5.1(XML) problem with Login to restricted bitstreams